[gd_scene load_steps=18 format=3 uid="uid://dvogahh8sitx"]

[ext_resource type="Script" path="res://scripts/control/exit.gd" id="1_7moob"]
[ext_resource type="Script" path="res://scripts/control/mode_select.gd" id="1_g52vd"]
[ext_resource type="Script" path="res://scripts/control/reset.gd" id="2_h4ido"]
[ext_resource type="Script" path="res://scripts/control/controller.gd" id="4_emc72"]
[ext_resource type="Theme" uid="uid://ch47gokw4nkj3" path="res://theme.tres" id="5_3mibj"]
[ext_resource type="FontFile" uid="uid://ce6y5gjob4a57" path="res://fonts/ProggyVector-Regular.otf" id="5_cnn2h"]
[ext_resource type="Script" path="res://scripts/algorithms/bfs.gd" id="5_hhmca"]
[ext_resource type="Script" path="res://scripts/ui/linepainter.gd" id="5_kgjw7"]
[ext_resource type="Script" path="res://scripts/graph/graph_manager.gd" id="6_3dfej"]
[ext_resource type="Script" path="res://scripts/algorithms/dfs.gd" id="6_80uru"]
[ext_resource type="PackedScene" uid="uid://cln1agegyr2f4" path="res://scenes/stack_frame.tscn" id="7_3x5ov"]
[ext_resource type="Script" path="res://scripts/control/navigate_algorithm.gd" id="11_ayaj7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uforu"]
radius = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pod14"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pxwd8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cl4ta"]

[sub_resource type="GDScript" id="GDScript_5nve5"]
script/source = "extends OptionButton

func _ready():
	TranslationServer.set_locale(\"de\")

func _on_item_selected(index):
	match index:
		0:
			TranslationServer.set_locale(\"de\")
		1:
			TranslationServer.set_locale(\"en\")
"

[node name="controller" type="Node" node_paths=PackedStringArray("graph_manager", "algorithms", "state_counter", "info_ui", "display", "button_knoten", "button_kanten", "button_move", "button_bfs", "button_dfs")]
script = ExtResource("4_emc72")
graph_manager = NodePath("graph_manager")
algorithms = NodePath("algorithms")
state_counter = NodePath("upper_gui/buttons/buttons_algorithm/HBoxContainer/state_counter")
info_ui = NodePath("info_gui")
display = NodePath("info_gui/VBoxContainer/display")
button_knoten = NodePath("upper_gui/buttons/buttons_graphmanager/HBoxContainer2/button_vertices")
button_kanten = NodePath("upper_gui/buttons/buttons_graphmanager/HBoxContainer2/button_edges")
button_move = NodePath("upper_gui/buttons/buttons_graphmanager/HBoxContainer2/button_move")
button_bfs = NodePath("upper_gui/buttons/buttons_algorithm/HBoxContainer/button_bfs")
button_dfs = NodePath("upper_gui/buttons/buttons_algorithm/HBoxContainer/button_dfs")

[node name="graph_manager" type="Node" parent="." node_paths=PackedStringArray("sweeper")]
process_mode = 1
script = ExtResource("6_3dfej")
sweeper = NodePath("sweeper")

[node name="sweeper" type="ShapeCast2D" parent="graph_manager"]
enabled = false
shape = SubResource("CircleShape2D_uforu")
target_position = Vector2(0, 0)
collide_with_areas = true
collide_with_bodies = false

[node name="algorithms" type="Node" parent="."]

[node name="bfs" type="Node" parent="algorithms" node_paths=PackedStringArray("stackspeicher", "label_call", "label_sequence", "label_queue", "label_return", "code_display")]
script = ExtResource("5_hhmca")
stackspeicher = NodePath("own_gui/HBoxContainer/MarginContainer/VBoxContainer2/Panel/ScrollContainer/stack")
label_call = NodePath("own_gui/HBoxContainer/MarginContainer2/VBoxContainer/label_call")
label_sequence = NodePath("own_gui/HBoxContainer/MarginContainer2/VBoxContainer/label_sequence")
label_queue = NodePath("own_gui/HBoxContainer/MarginContainer2/VBoxContainer/label_queue")
label_return = NodePath("own_gui/HBoxContainer/MarginContainer2/VBoxContainer/label_return")
code_display = NodePath("own_gui/HBoxContainer/MarginContainer2/VBoxContainer/code_display")

[node name="own_gui" type="ColorRect" parent="algorithms/bfs"]
visible = false
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -953.0
offset_top = 39.0
offset_bottom = -1.0
grow_horizontal = 0
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="algorithms/bfs/own_gui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="algorithms/bfs/own_gui/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="algorithms/bfs/own_gui/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="label_call" type="Label" parent="algorithms/bfs/own_gui/HBoxContainer/MarginContainer2/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "Tiefensuche (Aufruf x)"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="algorithms/bfs/own_gui/HBoxContainer/MarginContainer2/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2

[node name="label_sequence" type="Label" parent="algorithms/bfs/own_gui/HBoxContainer/MarginContainer2/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = " F  =  [...]"

[node name="label_queue" type="Label" parent="algorithms/bfs/own_gui/HBoxContainer/MarginContainer2/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = " F' =  [...] (von Aufruf y)"

[node name="code_display" type="RichTextLabel" parent="algorithms/bfs/own_gui/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/bold_font = ExtResource("5_cnn2h")
bbcode_enabled = true
text = "DFS_PSEUDOCODE"
fit_content = true
script = ExtResource("5_kgjw7")

[node name="HSeparator2" type="HSeparator" parent="algorithms/bfs/own_gui/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="label_return" type="Label" parent="algorithms/bfs/own_gui/HBoxContainer/MarginContainer2/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "Tiefensuche (Aufruf x)"

[node name="VSeparator" type="VSeparator" parent="algorithms/bfs/own_gui/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="algorithms/bfs/own_gui/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.66
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="algorithms/bfs/own_gui/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.66

[node name="stack" type="Label" parent="algorithms/bfs/own_gui/HBoxContainer/MarginContainer/VBoxContainer2"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "STACK"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="algorithms/bfs/own_gui/HBoxContainer/MarginContainer/VBoxContainer2"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2

[node name="Panel" type="Panel" parent="algorithms/bfs/own_gui/HBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_pod14")

[node name="ScrollContainer" type="ScrollContainer" parent="algorithms/bfs/own_gui/HBoxContainer/MarginContainer/VBoxContainer2/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.66

[node name="stack" type="VBoxContainer" parent="algorithms/bfs/own_gui/HBoxContainer/MarginContainer/VBoxContainer2/Panel/ScrollContainer"]
light_mask = 17
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="stack_frame" parent="algorithms/bfs/own_gui/HBoxContainer/MarginContainer/VBoxContainer2/Panel/ScrollContainer/stack" instance=ExtResource("7_3x5ov")]
layout_mode = 2

[node name="stack_frame2" parent="algorithms/bfs/own_gui/HBoxContainer/MarginContainer/VBoxContainer2/Panel/ScrollContainer/stack" instance=ExtResource("7_3x5ov")]
layout_mode = 2

[node name="stack_frame3" parent="algorithms/bfs/own_gui/HBoxContainer/MarginContainer/VBoxContainer2/Panel/ScrollContainer/stack" instance=ExtResource("7_3x5ov")]
layout_mode = 2

[node name="dfs" type="Node" parent="algorithms" node_paths=PackedStringArray("stackspeicher", "label_call", "label_sequence", "label_sequence_2", "label_return", "code_display")]
script = ExtResource("6_80uru")
stackspeicher = NodePath("own_gui/HBoxContainer/MarginContainer/VBoxContainer2/Panel/ScrollContainer/stack")
label_call = NodePath("own_gui/HBoxContainer/MarginContainer2/VBoxContainer/label_call")
label_sequence = NodePath("own_gui/HBoxContainer/MarginContainer2/VBoxContainer/label_sequence")
label_sequence_2 = NodePath("own_gui/HBoxContainer/MarginContainer2/VBoxContainer/label_sequence_2")
label_return = NodePath("own_gui/HBoxContainer/MarginContainer2/VBoxContainer/label_return")
code_display = NodePath("own_gui/HBoxContainer/MarginContainer2/VBoxContainer/code_display")

[node name="own_gui" type="ColorRect" parent="algorithms/dfs"]
visible = false
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -953.0
offset_top = 39.0
offset_bottom = -1.0
grow_horizontal = 0
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="algorithms/dfs/own_gui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="algorithms/dfs/own_gui/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="algorithms/dfs/own_gui/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="label_call" type="Label" parent="algorithms/dfs/own_gui/HBoxContainer/MarginContainer2/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "Tiefensuche (Aufruf x)"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="algorithms/dfs/own_gui/HBoxContainer/MarginContainer2/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2

[node name="label_sequence" type="Label" parent="algorithms/dfs/own_gui/HBoxContainer/MarginContainer2/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = " F  =  [...]"

[node name="label_sequence_2" type="Label" parent="algorithms/dfs/own_gui/HBoxContainer/MarginContainer2/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = " F' =  [...] (von Aufruf y)"

[node name="code_display" type="RichTextLabel" parent="algorithms/dfs/own_gui/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/bold_font = ExtResource("5_cnn2h")
bbcode_enabled = true
text = "DFS_PSEUDOCODE"
fit_content = true
script = ExtResource("5_kgjw7")

[node name="HSeparator2" type="HSeparator" parent="algorithms/dfs/own_gui/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="label_return" type="Label" parent="algorithms/dfs/own_gui/HBoxContainer/MarginContainer2/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "Tiefensuche (Aufruf x)"

[node name="VSeparator" type="VSeparator" parent="algorithms/dfs/own_gui/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="algorithms/dfs/own_gui/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.66
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="algorithms/dfs/own_gui/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.66

[node name="stack" type="Label" parent="algorithms/dfs/own_gui/HBoxContainer/MarginContainer/VBoxContainer2"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "STACK"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="algorithms/dfs/own_gui/HBoxContainer/MarginContainer/VBoxContainer2"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2

[node name="Panel" type="Panel" parent="algorithms/dfs/own_gui/HBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_pod14")

[node name="ScrollContainer" type="ScrollContainer" parent="algorithms/dfs/own_gui/HBoxContainer/MarginContainer/VBoxContainer2/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.66

[node name="stack" type="VBoxContainer" parent="algorithms/dfs/own_gui/HBoxContainer/MarginContainer/VBoxContainer2/Panel/ScrollContainer"]
light_mask = 17
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="stack_frame" parent="algorithms/dfs/own_gui/HBoxContainer/MarginContainer/VBoxContainer2/Panel/ScrollContainer/stack" instance=ExtResource("7_3x5ov")]
layout_mode = 2

[node name="stack_frame2" parent="algorithms/dfs/own_gui/HBoxContainer/MarginContainer/VBoxContainer2/Panel/ScrollContainer/stack" instance=ExtResource("7_3x5ov")]
layout_mode = 2

[node name="stack_frame3" parent="algorithms/dfs/own_gui/HBoxContainer/MarginContainer/VBoxContainer2/Panel/ScrollContainer/stack" instance=ExtResource("7_3x5ov")]
layout_mode = 2

[node name="upper_gui" type="ColorRect" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="buttons" type="HBoxContainer" parent="upper_gui" node_paths=PackedStringArray("controller")]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 41.0
grow_horizontal = 2
alignment = 1
script = ExtResource("1_g52vd")
controller = NodePath("../..")

[node name="buttons_graphmanager" type="MarginContainer" parent="upper_gui/buttons"]
layout_mode = 2
size_flags_horizontal = 2
theme = ExtResource("5_3mibj")

[node name="HBoxContainer2" type="HBoxContainer" parent="upper_gui/buttons/buttons_graphmanager"]
layout_mode = 2
size_flags_stretch_ratio = 1.5
alignment = 1

[node name="button_vertices" type="Button" parent="upper_gui/buttons/buttons_graphmanager/HBoxContainer2" groups=["buttons_active"]]
layout_mode = 2
tooltip_text = "VERTICES_TOOLTIP"
focus_mode = 1
theme = ExtResource("5_3mibj")
text = "VERTICES"

[node name="button_edges" type="Button" parent="upper_gui/buttons/buttons_graphmanager/HBoxContainer2" groups=["buttons_active"]]
layout_mode = 2
tooltip_text = "EDGES_TOOLTIP"
focus_mode = 1
theme = ExtResource("5_3mibj")
text = "EDGES"

[node name="button_move" type="Button" parent="upper_gui/buttons/buttons_graphmanager/HBoxContainer2" groups=["buttons_active"]]
layout_mode = 2
tooltip_text = "MOVE_TOOLTIP"
focus_mode = 1
theme = ExtResource("5_3mibj")
text = "MOVE"

[node name="button_reset" type="Button" parent="upper_gui/buttons/buttons_graphmanager/HBoxContainer2" node_paths=PackedStringArray("controller") groups=["buttons_active"]]
layout_mode = 2
tooltip_text = "RESET_TOOLTIP"
focus_mode = 1
theme = ExtResource("5_3mibj")
text = "RESET"
script = ExtResource("2_h4ido")
controller = NodePath("../../../../..")

[node name="buttons_algorithm" type="MarginContainer" parent="upper_gui/buttons"]
layout_mode = 2
theme = ExtResource("5_3mibj")

[node name="HBoxContainer" type="HBoxContainer" parent="upper_gui/buttons/buttons_algorithm"]
layout_mode = 2
alignment = 1

[node name="button_bfs" type="Button" parent="upper_gui/buttons/buttons_algorithm/HBoxContainer" groups=["buttons_active"]]
layout_mode = 2
tooltip_text = "BFS_TOOLTIP"
focus_mode = 1
theme = ExtResource("5_3mibj")
text = "BFS"

[node name="button_dfs" type="Button" parent="upper_gui/buttons/buttons_algorithm/HBoxContainer" groups=["buttons_active"]]
layout_mode = 2
tooltip_text = "DFS_TOOLTIP"
focus_mode = 1
theme = ExtResource("5_3mibj")
text = "DFS"

[node name="VSeparator" type="VSeparator" parent="upper_gui/buttons/buttons_algorithm/HBoxContainer"]
layout_mode = 2

[node name="button_stop" type="Button" parent="upper_gui/buttons/buttons_algorithm/HBoxContainer" groups=["buttons_navigation"]]
layout_mode = 2
tooltip_text = "STOP_TOOLTIP"
focus_mode = 1
mouse_filter = 2
theme = ExtResource("5_3mibj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pxwd8")
disabled = true
text = "STOP"

[node name="button_backward_further" type="Button" parent="upper_gui/buttons/buttons_algorithm/HBoxContainer" node_paths=PackedStringArray("controller") groups=["buttons_navigation"]]
layout_mode = 2
tooltip_text = "BACKWARD_TOOLTIP_2"
focus_mode = 1
mouse_filter = 2
theme = ExtResource("5_3mibj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cl4ta")
disabled = true
text = "<<--"
script = ExtResource("11_ayaj7")
controller = NodePath("../../../../..")
jump = -5

[node name="button_backward" type="Button" parent="upper_gui/buttons/buttons_algorithm/HBoxContainer" node_paths=PackedStringArray("controller") groups=["buttons_navigation"]]
layout_mode = 2
tooltip_text = "BACKWARD_TOOLTIP"
focus_mode = 1
mouse_filter = 2
theme = ExtResource("5_3mibj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cl4ta")
disabled = true
text = "<---"
script = ExtResource("11_ayaj7")
controller = NodePath("../../../../..")
jump = -1

[node name="button_forward" type="Button" parent="upper_gui/buttons/buttons_algorithm/HBoxContainer" node_paths=PackedStringArray("controller") groups=["buttons_navigation"]]
layout_mode = 2
tooltip_text = "FORWARD_TOOLTIP"
focus_mode = 1
mouse_filter = 2
theme = ExtResource("5_3mibj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cl4ta")
disabled = true
text = "--->"
script = ExtResource("11_ayaj7")
controller = NodePath("../../../../..")
jump = 1

[node name="button_forward_further" type="Button" parent="upper_gui/buttons/buttons_algorithm/HBoxContainer" node_paths=PackedStringArray("controller") groups=["buttons_navigation"]]
layout_mode = 2
tooltip_text = "FORWARD_TOOLTIP_2"
focus_mode = 1
mouse_filter = 2
theme = ExtResource("5_3mibj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cl4ta")
disabled = true
text = "-->>"
script = ExtResource("11_ayaj7")
controller = NodePath("../../../../..")
jump = 5

[node name="state_counter" type="Label" parent="upper_gui/buttons/buttons_algorithm/HBoxContainer"]
layout_mode = 2
theme = ExtResource("5_3mibj")
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="buttons_misc" type="MarginContainer" parent="upper_gui/buttons"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("5_3mibj")

[node name="HBoxContainer3" type="HBoxContainer" parent="upper_gui/buttons/buttons_misc"]
layout_mode = 2
alignment = 2

[node name="dropdown_local" type="OptionButton" parent="upper_gui/buttons/buttons_misc/HBoxContainer3" groups=["buttons_active"]]
layout_mode = 2
tooltip_text = "LOCAL_TOOLTIP"
focus_mode = 1
theme = ExtResource("5_3mibj")
item_count = 2
selected = 0
popup/item_0/text = "EN"
popup/item_0/id = 0
popup/item_1/text = "DE"
popup/item_1/id = 1
script = SubResource("GDScript_5nve5")

[node name="button_exit" type="Button" parent="upper_gui/buttons/buttons_misc/HBoxContainer3"]
layout_mode = 2
tooltip_text = "EXIT_TOOLTIP"
focus_mode = 1
theme = ExtResource("5_3mibj")
text = "EXIT"
script = ExtResource("1_7moob")

[node name="info_gui" type="ColorRect" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -953.0
offset_top = 39.0
offset_bottom = -1.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="info_gui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="display" type="RichTextLabel" parent="info_gui/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/bold_font = ExtResource("5_cnn2h")
bbcode_enabled = true
script = ExtResource("5_kgjw7")

[connection signal="pressed" from="upper_gui/buttons/buttons_graphmanager/HBoxContainer2/button_vertices" to="upper_gui/buttons" method="_on_button_vertices_pressed"]
[connection signal="pressed" from="upper_gui/buttons/buttons_graphmanager/HBoxContainer2/button_edges" to="upper_gui/buttons" method="_on_button_edges_pressed"]
[connection signal="pressed" from="upper_gui/buttons/buttons_graphmanager/HBoxContainer2/button_move" to="upper_gui/buttons" method="_on_button_move_pressed"]
[connection signal="pressed" from="upper_gui/buttons/buttons_graphmanager/HBoxContainer2/button_reset" to="upper_gui/buttons/buttons_graphmanager/HBoxContainer2/button_reset" method="_on_pressed"]
[connection signal="pressed" from="upper_gui/buttons/buttons_algorithm/HBoxContainer/button_bfs" to="upper_gui/buttons" method="_on_button_bfs_pressed"]
[connection signal="pressed" from="upper_gui/buttons/buttons_algorithm/HBoxContainer/button_dfs" to="upper_gui/buttons" method="_on_button_dfs_pressed"]
[connection signal="pressed" from="upper_gui/buttons/buttons_algorithm/HBoxContainer/button_stop" to="." method="stop_algorithm"]
[connection signal="pressed" from="upper_gui/buttons/buttons_algorithm/HBoxContainer/button_backward_further" to="upper_gui/buttons/buttons_algorithm/HBoxContainer/button_backward_further" method="_on_pressed"]
[connection signal="pressed" from="upper_gui/buttons/buttons_algorithm/HBoxContainer/button_backward" to="upper_gui/buttons/buttons_algorithm/HBoxContainer/button_backward" method="_on_pressed"]
[connection signal="pressed" from="upper_gui/buttons/buttons_algorithm/HBoxContainer/button_forward" to="upper_gui/buttons/buttons_algorithm/HBoxContainer/button_forward" method="_on_pressed"]
[connection signal="pressed" from="upper_gui/buttons/buttons_algorithm/HBoxContainer/button_forward_further" to="upper_gui/buttons/buttons_algorithm/HBoxContainer/button_forward_further" method="_on_pressed"]
[connection signal="item_selected" from="upper_gui/buttons/buttons_misc/HBoxContainer3/dropdown_local" to="." method="set_local"]
[connection signal="pressed" from="upper_gui/buttons/buttons_misc/HBoxContainer3/button_exit" to="upper_gui/buttons/buttons_misc/HBoxContainer3/button_exit" method="_on_pressed"]
